--- a/index.html
+++ b/index.html
@@ -1,283 +1,86 @@
+<!-- index.html (Customer Page) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Hotel Food Cart - Mobile View</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Order Food - Hotel</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #1f1c3a, #3c2a6d);
-      color: #ffffff;
-      margin: 0;
-      padding: 1rem;
-    }
-
-    h1 {
-      text-align: center;
-      color: #b49aff;
-      font-size: 1.5rem;
-      margin-bottom: 0.5rem;
-    }
-
-    #ongoing-orders {
-      text-align: center;
-      font-weight: 600;
-      font-size: 1.1rem;
-      color: #9a80f3;
-      margin-bottom: 1rem;
-    }
-
-    .menu-container, .cart-summary {
-      background: #1c1740;
-      padding: 1rem;
-      margin-bottom: 1.5rem;
-      border-radius: 12px;
-      box-shadow: 0 0 12px #7c5acfcc;
-    }
-
-    .menu-item {
-      display: flex;
-      flex-direction: column;
-      gap: 0.5rem;
-      padding: 0.8rem 0;
-      border-bottom: 1px solid #3b2d7f;
-    }
-
-    .menu-item:last-child {
-      border-bottom: none;
-    }
-
-    .item-info {
-      display: flex;
-      justify-content: space-between;
-      font-size: 1rem;
-      font-weight: 600;
-    }
-
-    .quantity-controls {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      gap: 1rem;
-    }
-
-    button.qty-btn {
-      background: #7c5acf;
-      color: white;
-      border: none;
-      width: 36px;
-      height: 36px;
-      font-size: 1.4rem;
-      border-radius: 8px;
-      cursor: pointer;
-      box-shadow: 0 0 8px #7c5acfcc;
-      transition: background 0.3s;
-    }
-
-    button.qty-btn:hover {
-      background: #9a80f3;
-    }
-
-    .qty-number {
-      font-size: 1.2rem;
-      font-weight: bold;
-      min-width: 24px;
-      text-align: center;
-    }
-
-    .cart-summary h2 {
-      font-size: 1.2rem;
-      color: #b49aff;
-      margin-bottom: 0.5rem;
-    }
-
-    .cart-items {
-      list-style: none;
-      padding-left: 0;
-      margin-bottom: 1rem;
-    }
-
-    .cart-items li {
-      padding: 0.6rem;
-      background: #2a2460;
-      margin-bottom: 0.6rem;
-      border-radius: 8px;
-      font-weight: 600;
-    }
-
-    .summary-row {
-      display: flex;
-      justify-content: space-between;
-      font-weight: 600;
-      margin-top: 0.5rem;
-    }
-
-    .place-order-btn {
-      margin-top: 1rem;
-      width: 100%;
-      padding: 0.9rem;
-      font-size: 1.1rem;
-      font-weight: 700;
-      background: #8a63ff;
-      color: white;
-      border: none;
-      border-radius: 12px;
-      box-shadow: 0 0 14px #9a80f3cc;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .place-order-btn:hover {
-      background: #a085f5;
-    }
+    body { font-family: Arial, sans-serif; margin: 20px; }
+    .menu-item { display: flex; justify-content: space-between; margin-bottom: 10px; }
+    .cart { margin-top: 20px; }
+    button { padding: 5px 10px; }
   </style>
 </head>
 <body>
+  <h1>Hotel Food Menu</h1>
+  <div id="menu"></div>
 
-<h1>Food Ordering</h1>
-<div id="ongoing-orders">Ongoing Orders: 0</div>
-
-<div class="menu-container" id="menu-container">
-  <!-- Menu items will be inserted here -->
-</div>
-
-<div class="cart-summary">
-  <h2>Your Cart</h2>
-  <ul class="cart-items" id="cart-items"></ul>
-  <div class="summary-row">
-    <span>Total:</span>
-    <span id="total-price">₹0</span>
+  <div class="cart">
+    <h2>Your Cart</h2>
+    <div id="cartItems"></div>
+    <button onclick="submitOrder()">Place Order</button>
   </div>
-  <div class="summary-row">
-    <span>Est. Wait:</span>
-    <span id="wait-time">0 min</span>
-  </div>
-  <button class="place-order-btn" id="place-order-btn" disabled>Place Order</button>
-</div>
 
-<script>
-  const menuItems = [
-    { id: 1, name: "Veg Biryani", price: 150, prepTime: 20 },
-    { id: 2, name: "Chicken Curry", price: 200, prepTime: 25 },
-    { id: 3, name: "Fried Rice", price: 120, prepTime: 15 },
-    { id: 4, name: "Paneer Butter Masala", price: 180, prepTime: 22 },
-    { id: 5, name: "Noodles", price: 110, prepTime: 15 },
-  ];
+  <script>
+    const menu = [
+      { id: 1, name: "Dosa", price: 40 },
+      { id: 2, name: "Idli", price: 30 },
+      { id: 3, name: "Fried Rice", price: 100 },
+    ];
 
-  let cart = [];
+    const cart = {};
 
-  const menuContainer = document.getElementById("menu-container");
-  const cartItemsEl = document.getElementById("cart-items");
-  const totalPriceEl = document.getElementById("total-price");
-  const waitTimeEl = document.getElementById("wait-time");
-  const placeOrderBtn = document.getElementById("place-order-btn");
-  const ongoingOrdersEl = document.getElementById("ongoing-orders");
-
-  function getPendingOrders() {
-    return JSON.parse(localStorage.getItem("pendingOrders") || "[]");
-  }
-
-  function savePendingOrders(orders) {
-    localStorage.setItem("pendingOrders", JSON.stringify(orders));
-  }
-
-  function renderMenu() {
-    menuContainer.innerHTML = "";
-    menuItems.forEach(item => {
-      const div = document.createElement("div");
-      div.className = "menu-item";
-      div.innerHTML = `
-        <div class="item-info">
-          <span>${item.name}</span>
-          <span>₹${item.price}</span>
-        </div>
-        <div class="quantity-controls">
-          <button class="qty-btn" onclick="changeQuantity(${item.id}, -1)">-</button>
-          <span class="qty-number" id="qty-${item.id}">0</span>
-          <button class="qty-btn" onclick="changeQuantity(${item.id}, 1)">+</button>
-        </div>
-      `;
-      menuContainer.appendChild(div);
-    });
-  }
-
-  function changeQuantity(id, delta) {
-    const item = cart.find(i => i.id === id);
-    if (item) {
-      item.quantity += delta;
-      if (item.quantity <= 0) cart = cart.filter(i => i.id !== id);
-    } else if (delta > 0) {
-      const menuItem = menuItems.find(i => i.id === id);
-      cart.push({ ...menuItem, quantity: 1 });
-    }
-    updateQtyDisplay(id);
-    renderCart();
-  }
-
-  function updateQtyDisplay(id) {
-    const span = document.getElementById(`qty-${id}`);
-    const item = cart.find(i => i.id === id);
-    span.textContent = item ? item.quantity : 0;
-  }
-
-  function renderCart() {
-    cartItemsEl.innerHTML = "";
-    if (cart.length === 0) {
-      cartItemsEl.innerHTML = "<li>Your cart is empty</li>";
-      placeOrderBtn.disabled = true;
-    } else {
-      cart.forEach(item => {
-        const li = document.createElement("li");
-        li.textContent = `${item.name} × ${item.quantity} = ₹${item.price * item.quantity}`;
-        cartItemsEl.appendChild(li);
+    function renderMenu() {
+      const menuDiv = document.getElementById("menu");
+      menu.forEach(item => {
+        const div = document.createElement("div");
+        div.className = "menu-item";
+        div.innerHTML = `
+          <span>${item.name} - ₹${item.price}</span>
+          <button onclick="addToCart(${item.id})">Add</button>
+        `;
+        menuDiv.appendChild(div);
       });
-      placeOrderBtn.disabled = false;
     }
-    updateTotalPrice();
-    updateWaitTime();
-    updateOngoingOrdersCount();
-  }
 
-  function updateTotalPrice() {
-    const total = cart.reduce((sum, item) => sum + item.price * item.quantity, 0);
-    totalPriceEl.textContent = `₹${total}`;
-  }
+    function addToCart(id) {
+      cart[id] = (cart[id] || 0) + 1;
+      updateCartUI();
+    }
 
-  function updateWaitTime() {
-    const pending = getPendingOrders();
-    const pendingTime = pending.reduce((acc, order) => {
-      const max = Math.max(...order.map(i => i.prepTime));
-      return acc + max;
-    }, 0);
-    const currentMax = cart.length ? Math.max(...cart.map(i => i.prepTime)) : 0;
-    waitTimeEl.textContent = `${pendingTime + currentMax} min`;
-  }
+    function updateCartUI() {
+      const cartDiv = document.getElementById("cartItems");
+      cartDiv.innerHTML = "";
+      Object.keys(cart).forEach(id => {
+        const item = menu.find(m => m.id == id);
+        cartDiv.innerHTML += `<p>${item.name} × ${cart[id]}</p>`;
+      });
+    }
 
-  function updateOngoingOrdersCount() {
-    const pending = getPendingOrders();
-    ongoingOrdersEl.textContent = `Ongoing Orders: ${pending.length}`;
-  }
+    function submitOrder() {
+      const items = Object.keys(cart).map(id => {
+        const item = menu.find(m => m.id == id);
+        return {
+          name: item.name,
+          quantity: cart[id],
+          price: item.price
+        };
+      });
 
-  placeOrderBtn.addEventListener("click", () => {
-    const pending = getPendingOrders();
-    pending.push(cart.map(i => ({ ...i })));
-    savePendingOrders(pending);
-    cart = [];
+      fetch("https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec", {
+        method: "POST",
+        body: JSON.stringify({ items })
+      })
+      .then(res => res.text())
+      .then(msg => {
+        alert("Order placed!");
+        Object.keys(cart).forEach(id => delete cart[id]);
+        updateCartUI();
+      });
+    }
+
     renderMenu();
-    renderCart();
-  });
-
-  renderMenu();
-  renderCart();
-
-  // Auto-refresh
-  setInterval(() => {
-    updateOngoingOrdersCount();
-    updateWaitTime();
-  }, 5000);
-</script>
-
+  </script>
 </body>
 </html>
